# scratch

./: .gitignore  CMakeLists.txt  make_ninja  reload_cmake_deps
rtags_build/: make_compile_commands
